# Flare

./: CMakeLists.txt  README.md  common.h  main.cpp
application/: CMakeLists.txt  application.cpp  application.h  type.h
function/: CMakeLists.txt
function/loader/: loader.cpp  loader.h
function/profiler/: profiler.cpp  profiler.h
function/renderer/: frame_graph.cpp  frame_graph.h  renderer.cpp  renderer.h
function/renderer/passes/: culling_pass.cpp  culling_pass.h  ddgi_pass.cpp  ddgi_pass.h  depth_pre_pass.cpp  depth_pre_pass.h  depth_pyramid_pass.cpp  depth_pyramid_pass.h  geometry_pass.cpp  geometry_pass.h  gtao_pass.cpp  gtao_pass.h  lighting_pass.cpp  lighting_pass.h  motion_vector_pass.cpp  motion_vector_pass.h  ray_traced_shadow_pass.cpp  ray_traced_shadow_pass.h  taa_pass.cpp  taa_pass.h  tone_mapping_pass.cpp  tone_mapping_pass.h
function/scene/: scene_graph.cpp  scene_graph.h
function/scene/camera/: camera.cpp  camera.h
function/scene/light/: directional_light.cpp  directional_light.h
platform/: CMakeLists.txt
platform/graphics/: acceleration_structure.cpp  acceleration_structure.h  buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  command_pool.cpp  command_pool.h  compute_pipeline.cpp  compute_pipeline.h  description.h  descriptor_pool.cpp  descriptor_pool.h  descriptor_set.cpp  descriptor_set.h  descriptor_set_layout.cpp  descriptor_set_layout.h  device.cpp  device.h  fence.cpp  fence.h  framebuffer.cpp  framebuffer.h  image.cpp  image.h  instance.cpp  instance.h  pipeline.cpp  pipeline.h  ray_tracing_context.cpp  ray_tracing_context.h  ray_tracing_pipeline.cpp  ray_tracing_pipeline.h  render_pass.cpp  render_pass.h  sampler.cpp  sampler.h  semaphore.cpp  semaphore.h  shader.cpp  (+6 more)
platform/window/: window.cpp  window.h
resource/frame_graph/: frame_graph.json
resource/shaders/gtao/: ao.comp  (+6 more)
(+73 files in other folders)
